// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> should add custom classes on demand 1`] = `
<ul
  className="custom-class-name css-h7r55a"
/>
`;

exports[`<Grid /> should be able to render a custom tag 1`] = `
<article
  className=" css-h7r55a"
/>
`;

exports[`<Grid /> should render without any further props 1`] = `
<ul
  className=" css-h7r55a"
/>
`;
